# momex

./: .coveragerc  .env-template  .gitignore  CHANGELOG.md  Makefile  README.md  make.bat  momex_config.yaml  pyproject.toml
.github/workflows/: ci.yml  release-py.yml
docs/: README.md  demos.md  env-vars.md  mail-example.md  memex-design.md  memex-usage.md  memex.md  momex-design.md  momex-usage.md  momex.md
examples/: simple_query_demo.py
examples/demo/: ingest.py  query.py
examples/memex/: async_example.py  conversation_example.py  memex_config.yaml  multi_tenant.py  quickstart.py
examples/momex/: async_example.py  config_example.py  config_postgres.yaml  config_sqlite.yaml  conversation_example.py  momex_config.yaml  multi_tenant.py  quickstart.py
src/memex/: __init__.py  config.py  exceptions.py  manager.py  memory.py  pool.py  prompts.py  query.py  sync.py
src/memex/storage/: __init__.py  base.py  postgres.py  sqlite.py
src/momex/: __init__.py  agent.py  config.py  exceptions.py  manager.py  memory.py  pool.py  prompts.py  query.py  short_term.py
src/momex/storage/: __init__.py  base.py  postgres.py  sqlite.py
src/typeagent/: __init__.py
src/typeagent/aitools/: embeddings.py  model_adapters.py  utils.py  vectorbase.py
src/typeagent/emails/: email_import.py  email_memory.py  email_message.py
src/typeagent/knowpro/: answer_context_schema.py  answers.py  collections.py  conversation_base.py  convknowledge.py  convsettings.py  factory.py  (+15 more)
tests/: conftest.py  test_add_messages_streaming.py  test_add_messages_with_indexing.py  test_answers.py  test_collections.py  test_conversation_metadata.py  test_convthreads.py  test_convutils.py  test_demo.py  test_email_import.py  test_email_message.py  test_embedding_consistency.py  test_embeddings.py  test_factory.py  test_incremental_index.py  test_interfaces.py  test_knowledge.py  test_kplib.py  test_mbox.py  test_mcp_server.py  test_memory_semrefindex.py  test_message_text_index_population.py  test_message_text_index_serialization.py  test_messageindex.py  test_messageutils.py  test_model_adapters.py  test_online.py  test_podcast_incremental.py  test_podcasts.py  test_property_index_population.py  test_propindex.py  test_query.py  test_query_method.py  test_related_terms_fast.py  test_related_terms_index_population.py  test_reltermsindex.py  test_search.py  test_searchlang.py  test_searchlang_compile.py  test_secindex.py  (+12 more)
tests/test_memex/: __init__.py  test_memory.py
tests/test_momex/: __init__.py  test_agent.py  test_memory.py  test_short_term.py
tests/testdata/: Episode_53_Answer_results.json  Episode_53_Search_results.json
tools/: benchmark_query.py  benchmark_semref_writes.py  benchmark_vectorbase.py  chat_sessions.py  get_keys.py  ingest_email.py  ingest_podcast.py  ingest_vtt.py  load_json.py  query.py  release.py
tools/mail/: README.md  gmail_dump.py  mbox_dump.py  mbox_to_emls.py  outlook_dump.py  pt.py
(+36 files in other folders)
