[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "momex"
version = "0.1.1"
description = "Memory system for AI agents with Structured RAG, built on TypeAgent"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [
  # Original TypeAgent authors
  { name = "Guido van Rossum", email = "gvanrossum@microsoft.com" },
  { name = "Steven Lucco" },
  { name = "Umesh Madan" },
  # Momex author
  { name = "Xiaoyu Zhang" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "azure-identity>=1.22.0",
  "black>=25.12.0",
  "colorama>=0.4.6",
  "mcp[cli]>=1.12.1",
  "numpy>=2.2.6",
  "openai>=1.81.0",
  "pydantic>=2.11.4",
  "pyreadline3>=3.5.4 ; sys_platform == 'win32'",
  "python-dotenv>=1.1.0",
  "tiktoken>=0.12.0",
  "typechat>=0.0.4",
  "webvtt-py>=0.5.1",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Needed to enable --logfire flag to tools/query.py
logfire = [
  "logfire>=4.1.0",
  "opentelemetry-instrumentation-httpx>=0.57b0",
]
# PostgreSQL backend support
postgres = [
  "asyncpg>=0.29.0",
]

[project.urls]
GitHub = "https://github.com/xiaoyu-work/typeagent-py"
Documentation = "https://github.com/xiaoyu-work/typeagent-py/tree/main/docs/momex.md"

[tool.uv.build-backend]
module-root = "src"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.pyright]
reportUnusedVariable = true
reportUnusedImport = true
reportDuplicateImport = true

[tool.isort]
profile = "black"
order_by_type = false
force_sort_within_sections = true

sections = ["FUTURE", "STDLIB", "THIRDPARTY", "AI", "FIRSTPARTY", "LOCALFOLDER"]
known_ai = ["mcp", "openai", "pydantic", "pydantic_ai", "tiktoken", "typechat"]
known_first_party = ["typeagent", "momex", "tests", "tools", "gmail", "demo"]
known_local_folder = ["conftest"]

[dependency-groups]
dev = [
  "azure-mgmt-authorization>=4.0.0",
  "azure-mgmt-keyvault>=12.1.1",
  "coverage[toml]>=7.9.1",
  "google-api-python-client>=2.184.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "isort>=7.0.0",
  "logfire>=4.1.0",  # So 'make check' passes
  "opentelemetry-instrumentation-httpx>=0.57b0",
  "pydantic-ai-slim[openai]>=1.39.0",
  "pyright>=1.1.408",  # 407 has a regression
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-mock>=3.14.0",
]
